# arbitra-backend

./: .gitignore  Cargo.toml  README.md  api_contract.md  api_contract_removed.md  testing_api_contract.md
src/: api_contract.md  main.rs
src/actions/: client.rs  document.rs  index.rs  mod.rs
src/handlers/: application.rs  applications_struct.rs  document.rs  document_struct.rs  errors.rs  index.rs  index_struct.rs  libs.rs  mod.rs  welcome.rs
src/handlers/for_testing/: bulk.rs  create_test_data.rs  destructive_delete_all.rs  file_import.rs  get_keys.rs  index_get_all.rs  mod.rs
src/handlers/libs/: application.rs  document.rs  helpers.rs  index.rs  libs.rs  mod.rs
src/handlers/structs/: applications_struct.rs  document_struct.rs  index_struct.rs  mod.rs
src/handlers/test1_backup/: document.rs  mod.rs
src/middlewares/: cors.rs
src/models/: client.rs  documents.rs  helpers.rs  index.rs  mod.rs
src/models_backup/: client.rs  documents.rs  errors.rs  helpers.rs  index.rs
src/routes/: create.rs  delete.rs  document.rs  index.rs  index_struct.rs  mod.rs  read.rs  update.rs  welcome.rs
src/routes/testing/: create.rs
src/routes_backup/: document.rs  document_struct.rs  helpers.rs  index.rs  welcome.rs
src/routes_backup/testing/: create.rs  mod.rs
